# ZegoLiveDemo5Rtp

./: .gitattributes  .gitignore  README.md
windows/: CMakeLists.txt  sdk_pkg_info.json
windows/ZegoLiveDemo/: CMakeLists.txt  Resource.aps  ZegoImageShowDialog.ui  ZegoLiveDemo.cpp  ZegoLiveDemo.h  ZegoLiveDemo.opensdf  ZegoLiveRoomDialog.ui  ZegoMainDialog.qrc  ZegoMainDialog.ui  ZegoMusicHookDialog.ui  ZegoShareDialog.qrc  ZegoShareDialog.ui  main.cpp  resource.h  style.qrc  zego_sdk_protocol.h
windows/ZegoLiveDemo/AudioHookDialog/: ZegoMusicHookDialog.cpp  ZegoMusicHookDialog.h
windows/ZegoLiveDemo/Base/: IncludeZegoLiveRoomApi.h  ZegoBase.cpp  ZegoBase.h  ZegoBaseDialog.cpp  ZegoBaseDialog.h  ZegoLiveDemoDefines.h
windows/ZegoLiveDemo/Config/: ZegoUserConfig.cpp  ZegoUserConfig.h
windows/ZegoLiveDemo/Delegate/: NoFocusFrameDelegate.cpp  NoFocusFrameDelegate.h
windows/ZegoLiveDemo/Device/: ZegoDeviceManager.cpp  ZegoDeviceManager.h
windows/ZegoLiveDemo/Dialog/: ZegoExternalAnchorDialog.cpp  ZegoExternalAnchorDialog.h  ZegoImageShowDialog.cpp  ZegoImageShowDialog.h  ZegoMainDialog.cpp  ZegoMainDialog.h  ZegoMixStreamAnchorDialog.cpp  ZegoMixStreamAnchorDialog.h  ZegoMixStreamAudienceDialog.cpp  ZegoMixStreamAudienceDialog.h  ZegoMoreAnchorDialog.cpp  ZegoMoreAnchorDialog.h  ZegoMoreAudienceDialog.cpp  ZegoMoreAudienceDialog.h  ZegoPublish2StreamDialog.cpp  ZegoPublish2StreamDialog.h  ZegoShareDialog.cpp  ZegoShareDialog.h  ZegoSingleAnchorDialog.cpp  ZegoSingleAnchorDialog.h  ZegoSingleAudienceDialog.cpp  ZegoSingleAudienceDialog.h
windows/ZegoLiveDemo/External_Input/: ZegoInputManager.cpp  ZegoInputManager.h
windows/ZegoLiveDemo/Model/: ZegoRoomModel.cpp  ZegoRoomModel.h  ZegoRoomMsgModel.cpp  ZegoRoomMsgModel.h  ZegoStreamModel.cpp  ZegoStreamModel.h  ZegoUserModel.cpp  ZegoUserModel.h  ZegoVideoFrame.cpp  ZegoVideoFrame.h
windows/ZegoLiveDemo/Module/: ZegoSurfaceMergeApi.cpp  ZegoSurfaceMergeApi.h
windows/ZegoLiveDemo/NSIS/: LiveDemo5.nsi
windows/ZegoLiveDemo/OSX_Objective-C/: ZegoAVDevice.h  ZegoAVDevice.mm  ZegoCGImageToQImage.h  ZegoCGImageToQImage.mm  ZegoViewZoom.h  ZegoViewZoom.mm
windows/ZegoLiveDemo/Resources/: ZegoLiveDemo.icns  res.aps  res.rc
windows/ZegoLiveDemo/Resources/locale/: zegolivedemo_en.qm  zegolivedemo_en.ts  zegolivedemo_zh.qm  zegolivedemo_zh.ts
windows/ZegoLiveDemo/Settings/: ZegoSettingsModel.cpp  ZegoSettingsModel.h
windows/ZegoLiveDemo/Signal/: ZegoSDKSignal.cpp  ZegoSDKSignal.h
windows/ZegoLiveDemo/SoftWareInfo/: ZegoSoftWareInfo.cpp  ZegoSoftWareInfo.h
windows/ZegoLiveDemo/UI/: CursorPosCalculator.cpp  CursorPosCalculator.h  FramelessHelper.cpp  FramelessHelper.h  FramelessHelperPrivate.h  WidgetData.cpp  WidgetData.h  ZegoAVView.cpp  ZegoAVView.h  ZegoComboBox.cpp  ZegoComboBox.h  ZegoEnterRoomButton.cpp  ZegoEnterRoomButton.h  ZegoImageButton.cpp  ZegoImageButton.h  ZegoMicrophoneButton.cpp  ZegoMicrophoneButton.h  ZegoProgressIndicator.cpp  ZegoProgressIndicator.h  ZegoRoomList.cpp  ZegoRoomList.h  ZegoRoomMessageLabel.cpp  ZegoRoomMessageLabel.h  ZegoSlider.cpp  ZegoSlider.h  ZegoStateButton.cpp  ZegoStateButton.h  ZegoSwitchButton.cpp  ZegoSwitchButton.h  frameless_helper.cpp  frameless_helper.h
windows/ZegoLiveDemo/VideoCapture/: ZegoCamera.cpp  ZegoCamera.h  ZegoVideoCaptureFactory.cpp  ZegoVideoCaptureFactory.h
windows/ZegoLiveDemo/VideoFilter/: ZegoVideoFilterDemo.cpp  ZegoVideoFilterDemo.h  ZegoVideoFilterFactoryDemo.cpp  ZegoVideoFilterFactoryDemo.h
windows/build-osx/: build.sh  generate.sh
windows/build-win/: generate.bat  generate_for_xp.bat  generate_x64.bat  generate_x86.bat  generate_x86_xp.bat
windows/build-win/cmake_temp_x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ZegoLiveDemo.sln  cmake_install.cmake
windows/build-win/cmake_temp_x64/ZegoLiveDemo/: ZegoLiveDemo.vcxproj  ZegoLiveDemo.vcxproj.filters  ZegoMainDialog.qrc.depends  ZegoShareDialog.qrc.depends  cmake_install.cmake  qrc_ZegoMainDialog.cpp  qrc_ZegoShareDialog.cpp  qrc_style.cpp  style.qrc.depends  ui_ZegoImageShowDialog.h  ui_ZegoLiveRoomDialog.h  ui_ZegoMainDialog.h  ui_ZegoMusicHookDialog.h  ui_ZegoShareDialog.h
windows/build-win/cmake_temp_x64/ZegoLiveDemo/Config/: ZegoUserConfig.ini
windows/build-win/cmake_temp_x64/ZegoLiveDemo/ZegoLiveDemo_autogen/: mocs_compilation.cpp
windows/include/zegoaudiohook/: ZegoAudioHook.h
windows/include/zegoliveroom/: AVDefines.h  ChatRoom.h  ChatRoomCallback.h  LiveRoom-IM.h  LiveRoom-Player.h  LiveRoom-Publisher.h  LiveRoom-Relay.h  LiveRoom-ReliableMessage.h  LiveRoom.h  LiveRoomCallback-IM.h  LiveRoomCallback-Player.h  LiveRoomCallback-Publisher.h  LiveRoomCallback-Relay.h  LiveRoomCallback-ReliableMessage.h  LiveRoomCallback.h  LiveRoomDefines-IM.h  LiveRoomDefines-Player.h  LiveRoomDefines-Publisher.h  LiveRoomDefines.h  RoomDefines.h  audio_in_output.h  media_player.h  video_capture.h  video_format.h  zego-api-audio-aux.h  zego-api-audio-device.h  zego-api-audio-encrypt-decrypt.h  zego-api-audio-frame.h  zego-api-audio-processing.h  zego-api-defines.h  zego-api-error.h  zego-api-external-audio-device.h  zego-api-external-video-capture.h  zego-api-external-video-filter.h  zego-api-external-video-render.h  zego-api-media-recorder.h  zego-api-media-side-info.h  zego-api-mediaplayer-defines.h  zego-api-mediaplayer.h  zego-api-mix-engine-playout.h  (+3 more)
windows/include/zegosurfacemerge/: ZegoSurfaceMerge.h  ZegoSurfaceMergeCallback.h  ZegoSurfaceMergeDefine.h
windows/thirdLibs/zegoautoconfig/include/: app_state.hpp  app_type.hpp  appid_version.hpp  auto_config_delegate.hpp  config_api.hpp  config_api_helper.h  config_result.hpp  data_storage_factory.hpp  data_storage_util.hpp  http_client.hpp  http_client_factory.hpp  init_sdk_completion_callback.hpp  request_method.hpp  response_listener.hpp  room_info.hpp  room_list_update_listener.hpp  sdk_audio_delegate.hpp  sdk_common_delegate.hpp  sdk_video_delegate.hpp  stream_info.hpp  string_request.hpp  system_toolkit.hpp  system_toolkit_factory.hpp  utils_manager.hpp
(+453 files in other folders)
